# enderecobr_rs

./: .gitignore  .readthedocs.yml  Cargo.toml  Makefile  README.md
.github/workflows/: atualizar-snapshot.yml  ci-python.yml  ci-rust.yml  codspeed.yml  coverage-rust.yml  maturin.yml  publish-cargo.yml  readthedocs.yml  snapshot-test.yml
benches/: numero_extenso_bench.rs  padronizador_bench.rs
bindings/python/: Cargo.toml  Makefile  mkdocs.yml  pyproject.toml
bindings/python/docs/: index.md  requirements.txt
bindings/python/enderecobr/: __init__.py  enderecobr.pyi
bindings/python/enderecobr/tests/: test_geral.py
bindings/python/src/: lib.rs
datasets/: .gitignore  Makefile  README_HF.md  labeling-gui.py
datasets/qualidade_endereco/: aplicar_classificacao.py  classificar_qualidade_ml.py  expadir_dataset.py  expansao_dataset.py  gerar_embeddings.py  treinar_expansao_dataset.py
datasets/sql/: censo_escolar.sql  cneas.sql  cnefe.sql  cnes.sql  cno.sql  cnpj.sql  dataset_total.sql  duckdb_init.sql  duckdb_migration.sql  municipios_cnpj.sql  postos_cadunico.sql  snapshot_test_bruto.sql
scripts/: bairro.sql  cep.sql  complemento.sql  criar-benchmark.r  enderecos.sql  estado.sql  logradouro.sql  municipio.sql
scripts/crf/: .gitignore  Makefile  README.md  pyproject.toml
scripts/crf/src/crf_endereco/: endereco.py  eval.py  inspecao_parametros.py  preproc.py  teste_manual.py  treinamento.py  tunning.py
scripts/crf/src/crf_endereco/tests/: test_endereco.py  test_preproc.py  test_rotulador.py
scripts/crf/src/sql/: cnefe.sql  cnes.sql  dataset_final.sql
src/: bairro.rs  cep.rs  complemento.rs  estado.rs  io.rs  lib.rs  logradouro.rs  main.rs  metaphone.rs  municipio.rs  numero.rs  numero_extenso.rs  separador_endereco.rs  tipo_logradouro.rs
src/data/: municipios.csv  tagger.crf
tests/snapshot/: Cargo.toml
tests/snapshot/src/: main.rs
