[package]
name = "enderecobr_rs"
version = "0.0.1"
edition = "2024"
license = "MIT"
authors = ["Daniel Herszenhut Meirelles Santos <daniel.santos@ipea.gov.br>", "Gabriel Garcia de Almeida <gabriel.almeida@ipea.gov.br", "Rafael Henrique Moraes Pereira <rafael.pereira@ipea.gov.br>"]
repository = "https://github.com/ipeaGIT/enderecobr_rs"
homepage = "https://github.com/ipeaGIT/enderecobr_rs"
categories = ["text-processing", "value-formatting", "science::geo"]
keywords = ["address", "brazil", "brasil", "regex", "geocoding"]
description = "Esta biblioteca tem por objetivo prover de funções utilizadas para padronizar endereços brasileiros, afim de facilitar processamentos posteriores."
exclude = [ "scripts/"]

[[bin]]
name = "separacao-lote"
path = "src/bin/separacao-lote.rs"
required-features = ["experimental"]

[features] 
default = []
experimental = ["crfs"]

[dependencies]
clap = { version = "4.5.50", features = ["derive"] }
crfs = { version = "0.2.0", optional = true }
diacritics = "0.2.2"
itertools = "0.14.0"
polars = { version = "0.51.0", features = ["lazy", "parquet", "strings", "new_streaming", "polars-lazy", "polars-io", "polars-parquet", "object"] }
regex = "1.11.1"
