[package]
name = "enderecobr_rs"
version = "0.0.5"
edition = "2021"
license = "MIT"
rust-version = '1.81'
authors = ["Daniel Herszenhut Meirelles Santos <daniel.santos@ipea.gov.br>", "Gabriel Garcia de Almeida <gabriel.almeida@ipea.gov.br", "Rafael Henrique Moraes Pereira <rafael.pereira@ipea.gov.br>"]
repository = "https://github.com/ipeaGIT/enderecobr_rs"
homepage = "https://github.com/ipeaGIT/enderecobr_rs"
documentation = "https://docs.rs/enderecobr_rs"
categories = ["text-processing", "value-formatting", "science::geo"]
keywords = ["address", "brazil", "brasil", "regex", "geocoding"]
description = "Esta biblioteca tem por objetivo prover de funções utilizadas para padronizar endereços brasileiros, afim de facilitar processamentos posteriores."
exclude = [ "scripts/", "src/snapshots"] # pasta de snapshots é pesada e desnecessária para publicar

[[bin]]
name = "separacao-lote"
path = "src/bin/separacao-lote.rs"
required-features = ["experimental", "cli"]

[[bin]]
name = "bench-separacao"
path = "src/bin/bench-separacao.rs"
required-features = ["experimental", "cli"]

[[bin]]
name = "padronizar"
path = "src/bin/padronizar.rs"
required-features = ["cli"]

[[bin]]
name = "teste-comparativo"
path = "src/bin/teste-comparativo.rs"
required-features = ["cli"]


[[bin]]
name = "padronizacao-lote"
path = "src/bin/padronizacao-lote.rs"
required-features = ["cli"]

[features] 
default = []
snap_test = [] # Teste de snapshot é meio lento
experimental = ["crfsuite"]
cli = ["polars", "clap"]

[dependencies]
clap = { version = "4.5.52", features = ["derive"], optional = true }
crfsuite = { version = "0.3.1", optional = true}
diacritics = "0.2.2"
itertools = "0.14.0"
# Feature de timezone é temporário até corrigirem a issue abaixo
# https://github.com/pola-rs/polars/issues/25148
polars = { version = "0.52.0", features = ["lazy", "parquet", "timezones"], optional = true }
regex = "1.11.1"
unicode-normalization = "0.1.25"

# Perfil de release mais otimizado, porém muito mais lento de compilar.
# https://doc.rust-lang.org/cargo/reference/profiles.html
[profile.release-lto]
inherits = "release"
# Diminui o tamanho do binário apagando informações de debug
strip = true
# Otimizações 'custo benefício' no linker. Tende a diminui o tamanho do executável.
lto = "thin"
# Quanto menor, aumenta o tempo de compilação mas o código fica mais otimizado
codegen-units = 1

[lints.clippy]
# https://rust-trends.com/posts/mastering-clippy-elevating-your-rust-code-quality/
single_match = "warn"
single_match_else = "warn"
needless_match = "warn"
needless_late_init = "warn"
redundant_pattern_matching = "warn"
redundant_pattern = "warn"
redundant_guards = "warn"
collapsible_match = "warn"
match_single_binding = "warn"
match_same_arms = "warn"
match_ref_pats = "warn"
match_bool = "warn"
needless_bool = "deny"
unwrap_used = "warn"
expect_used = "warn"

[dev-dependencies]
insta = { version = "1.44.1", features = ["yaml"] }

# A lib sugere isso no build em modo dev mesmo para acelerar os testes de snapshot
# https://insta.rs/docs/quickstart/
[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3
